pkg/controller/testdata/basic/expected.yaml.d/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ec2-metadata-access
  namespace: test-data
  labels:
    kifthenfi.cloudnautique.com/manifest-hash: 12cfff17
    kifthenfi.cloudnautique.com/manifest-key: network-policy
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
  podSelector: {}
  policyTypes:
    - Egress
